--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#server.port=8082
+server.port=8082
 #
 #spring.rabbitmq.host=192.168.100.62
 #spring.rabbitmq.port=5672
@@ -25,3 +25,8 @@ logging.level.org.hibernate.type.descriptor.sql=trace
 
 # Server ??
 server.servlet.encoding.force-response=true
+
+# application.properties
+#spring.cache.type=redis
+spring.redis.host=localhost
+spring.redis.port=6379
