--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,7 @@ logging.level.org.hibernate.type.descriptor.sql=trace
 
 # Server ??
 server.servlet.encoding.force-response=true
+
+# Redis ?
+spring.redis.host=localhost
+spring.redis.port=6379
