출판사 및 통계처리 진행중

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 server.port=8082
+
+server.servlet.session.timeout=10m
+
 #
 #spring.rabbitmq.host=192.168.100.62
 #spring.rabbitmq.port=5672
@@ -26,11 +29,8 @@ logging.level.org.hibernate.type.descriptor.sql=trace
 # Server ??
 server.servlet.encoding.force-response=true
 
-<<<<<<< HEAD
 # Redis ?
-=======
 # application.properties
 #spring.cache.type=redis
->>>>>>> origin
 spring.redis.host=localhost
 spring.redis.port=6379
