--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,10 @@
 server.port=8082
 
-server.servlet.session.timeout=10m
-
-#
-#spring.rabbitmq.host=192.168.100.62
-#spring.rabbitmq.port=5672
-#spring.rabbitmq.username=rabbit
-#spring.rabbitmq.password=password1234!
+# rabbitMQ
+spring.rabbitmq.host=192.168.100.177
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=rabbit
+spring.rabbitmq.password=password1234!
 
 # Spring ?????? ??
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -18,6 +16,7 @@ spring.jpa.open-in-view=false
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show-sql=true
+
 #sql??
 Database.connect("jdbc:mysql://localhost:3306/books", driver = "com.mysql.cj.jdbc.Driver", user = "root", password = "password1234!")
 # Exposed ????? ?? ??
