--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,7 +29,6 @@ logging.level.org.hibernate.type.descriptor.sql=trace
 server.servlet.encoding.force-response=true
 
 # Redis ?
-# application.properties
 #spring.cache.type=redis
-spring.redis.host=localhost
+spring.redis.host=192.168.100.177
 spring.redis.port=6379
