--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8082
-#
-#spring.rabbitmq.host=192.168.100.62
+#ipconfig/all
+#spring.rabbitmq.host=192.168.100.94
 #spring.rabbitmq.port=5672
 #spring.rabbitmq.username=rabbit
 #spring.rabbitmq.password=password1234!
@@ -10,11 +10,11 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/books?serverTimezone=UTC&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=password1234!
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.open-in-view=false
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.show-sql=true
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+#spring.jpa.open-in-view=false
+#spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.show-sql=true
 #sql??
 Database.connect("jdbc:mysql://localhost:3306/books", driver = "com.mysql.cj.jdbc.Driver", user = "root", password = "password1234!")
 # Exposed ????? ?? ??
