--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.username=rabbit
 spring.rabbitmq.password=password1234!
 
-# Spring ?????? ??
+# Spring
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/books?serverTimezone=UTC&characterEncoding=UTF-8
 spring.datasource.username=root
@@ -17,18 +17,19 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show-sql=true
 
-#sql??
+#sql
 Database.connect("jdbc:mysql://localhost:3306/books", driver = "com.mysql.cj.jdbc.Driver", user = "root", password = "password1234!")
-# Exposed ????? ?? ??
+
+# Exposed
 logging.level.org.jetbrains.exposed=debug
 
-# Hibernate ?? ??
+# Hibernate
 logging.level.org.hibernate.type.descriptor.sql=trace
 
-# Server ??
+# Server
 server.servlet.encoding.force-response=true
 
-# Redis ?
+# Redis
 #spring.cache.type=redis
 spring.redis.host=192.168.100.177
 spring.redis.port=6379
