--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8082
 
 # rabbitMQ
-spring.rabbitmq.host=192.168.100.177
+spring.rabbitmq.host=192.168.100.204
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=rabbit
 spring.rabbitmq.password=password1234!
@@ -16,6 +16,7 @@ spring.jpa.open-in-view=false
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show-sql=true
+spring.mvc.async.request-timeout=60000
 
 #sql
 Database.connect("jdbc:mysql://localhost:3306/books", driver = "com.mysql.cj.jdbc.Driver", user = "root", password = "password1234!")
