메세지큐 사용자/도서정보 별 조회수 증가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,12 @@
 server.port=8082
 #ipconfig/all
-#spring.rabbitmq.host=192.168.100.94
-#spring.rabbitmq.port=5672
-#spring.rabbitmq.username=rabbit
-#spring.rabbitmq.password=password1234!
+spring.rabbitmq.host=192.168.100.94
+#spring.rabbitmq.host=192.168.0.1
+# 192.168.100.94:localhost 15672
+
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=rabbit
+spring.rabbitmq.password=password1234!
 
 # Spring ?????? ??
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
