--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/books?serverTimezone=UTC&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=password1234!
+addLogger(StdOutSqlLogger)
 #spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 #spring.jpa.open-in-view=false
 #spring.jpa.hibernate.ddl-auto=none
