--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 server.port=8082
 #ipconfig/all
+#spring.rabbitmq.host=172.30.1.82
 spring.rabbitmq.host=192.168.100.94
 #spring.rabbitmq.host=192.168.0.21
 #spring.rabbitmq.host=192.168.0.7
@@ -11,7 +12,9 @@ spring.rabbitmq.password=password1234!
 
 # Spring ?????? ??
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/books?serverTimezone=UTC&characterEncoding=UTF-8
+#spring.datasource.url=jdbc:mysql://localhost:3306/books?serverTimezone=UTC&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://localhost:3306/books
+
 spring.datasource.username=root
 spring.datasource.password=password1234!
 addLogger(StdOutSqlLogger)
