--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 server.port=8082
+#docker -> ??host ?? ?? -> RDS
+
 #ipconfig/all
 #spring.rabbitmq.host=172.30.1.82
 #spring.rabbitmq.host=192.168.100.94
 #spring.rabbitmq.host=192.168.0.21
-spring.rabbitmq.host=192.168.0.7
+#spring.rabbitmq.host=192.168.0.7
 # 192.168.100.94:15672
 
 spring.rabbitmq.port=5672
@@ -11,20 +13,24 @@ spring.rabbitmq.username=rabbit
 spring.rabbitmq.password=password1234!
 
 # Spring ?????? ??
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.datasource.url=jdbc:mysql://localhost:3306/books?serverTimezone=UTC&characterEncoding=UTF-8
-spring.datasource.url=jdbc:mysql://localhost:3306/books
-
-spring.datasource.username=root
+#spring.datasource.url=jdbc:mysql://localhost:3306/books
+#spring.datasource.username=root
+#spring.datasource.password=password1234!
+#addLogger(StdOutSqlLogger)
+#RDS ??
+spring.datasource.url=jdbc:mysql://mydb.casqk70zvu2h.ap-northeast-2.rds.amazonaws.com:3306/books
+spring.datasource.username=admin
 spring.datasource.password=password1234!
-addLogger(StdOutSqlLogger)
+
 #spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 #spring.jpa.open-in-view=false
 #spring.jpa.hibernate.ddl-auto=none
 #spring.jpa.properties.hibernate.format_sql=true
 #spring.jpa.properties.hibernate.show-sql=true
 #sql??
-Database.connect("jdbc:mysql://localhost:3306/books", driver = "com.mysql.cj.jdbc.Driver", user = "root", password = "password1234!")
+#Database.connect("jdbc:mysql://localhost:3306/books", driver = "com.mysql.cj.jdbc.Driver", user = "root", password = "password1234!")
 # Exposed ????? ?? ??
 logging.level.org.jetbrains.exposed=debug
 
@@ -32,7 +38,7 @@ logging.level.org.jetbrains.exposed=debug
 logging.level.org.hibernate.type.descriptor.sql=trace
 
 # Server ??
-server.servlet.encoding.force-response=true 
+server.servlet.encoding.force-response=true
 
 # application.properties
 #spring.cache.type=redis
