--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -28,3 +28,7 @@
 #spring.datasource.url=jdbc:mysql://mydb.casqk70zvu2h.ap-northeast-2.rds.amazonaws.com:3306/books
 #spring.datasource.username=admin
 #spring.datasource.password=password1234!
+
+#?? redis
+spring.data.redis.host=redis
+spring.data.redis.port=6379
