--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,16 +13,15 @@ spring.rabbitmq.username=rabbit
 spring.rabbitmq.password=password1234!
 
 # Spring ?????? ??
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://localhost:3306/books?serverTimezone=UTC&characterEncoding=UTF-8
-#spring.datasource.url=jdbc:mysql://localhost:3306/books
-#spring.datasource.username=root
-#spring.datasource.password=password1234!
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/books?serverTimezone=UTC&characterEncoding=UTF-8
+spring.datasource.username=root
+spring.datasource.password=password1234!
 #addLogger(StdOutSqlLogger)
 #RDS ??
-spring.datasource.url=jdbc:mysql://mydb.casqk70zvu2h.ap-northeast-2.rds.amazonaws.com:3306/books
-spring.datasource.username=admin
-spring.datasource.password=password1234!
+#spring.datasource.url=jdbc:mysql://mydb.casqk70zvu2h.ap-northeast-2.rds.amazonaws.com:3306/books
+#spring.datasource.username=admin
+#spring.datasource.password=password1234!
 
 #spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 #spring.jpa.open-in-view=false
