--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,12 +1,12 @@
 
 ##??? rabbit
-#spring.rabbitmq.addresses=amqps://b-e02ef598-db33-4569-80f5-0f05759ff19a.mq.ap-northeast-2.amazonaws.com:5671
-#spring.rabbitmq.password=password1234!
+spring.rabbitmq.addresses=amqps://b-e02ef598-db33-4569-80f5-0f05759ff19a.mq.ap-northeast-2.amazonaws.com:5671
+spring.rabbitmq.password=password1234!
 
-#
-#spring.datasource.url=jdbc:mysql://mydb.casqk70zvu2h.ap-northeast-2.rds.amazonaws.com:3306/books
-#spring.datasource.username=admin
-#spring.datasource.password=password1234!
+#RDS
+spring.datasource.url=jdbc:mysql://mydb.casqk70zvu2h.ap-northeast-2.rds.amazonaws.com:3306/books
+spring.datasource.username=admin
+spring.datasource.password=password1234!
 
 # source?? ???
 # openfeign.client.config.?????.url=?? ()
