--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,10 +4,11 @@ server.port=8082
 #ipconfig/all
 #spring.rabbitmq.host=172.30.1.82
 #spring.rabbitmq.host=192.168.100.94
-#spring.rabbitmq.host=192.168.0.21
+spring.rabbitmq.host=192.168.0.21
 #spring.rabbitmq.host=192.168.0.7
-# 192.168.100.94:15672
+# 192.168.100.94:5672
 
+#spring.rabbitmq.port=amqp://192.168.100.94:5672
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=rabbit
 spring.rabbitmq.password=password1234!
@@ -18,14 +19,9 @@ spring.datasource.url=jdbc:mysql://localhost:3306/books?serverTimezone=UTC&chara
 spring.datasource.username=root
 spring.datasource.password=password1234!
 #addLogger(StdOutSqlLogger)
-#RDS ??
-#spring.datasource.url=jdbc:mysql://mydb.casqk70zvu2h.ap-northeast-2.rds.amazonaws.com:3306/books
-#spring.datasource.username=admin
-#spring.datasource.password=password1234!
 
 #sql??
 #Database.connect("jdbc:mysql://localhost:3306/books", driver = "com.mysql.cj.jdbc.Driver", user = "root", password = "password1234!")
-# Exposed ????? ?? ??
 logging.level.org.jetbrains.exposed=debug
 
 # Hibernate ?? ??
