--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,26 +1,35 @@
-#spring.rabbitmq.port=amqp://192.168.100.94:5672
+server.port=8082
+#ipconfig/all
+#spring.rabbitmq.host=172.24.64.1
+#spring.rabbitmq.host=192.168.100.94
+spring.rabbitmq.host=192.168.0.21
+#spring.rabbitmq.host=192.168.0.7
+# 192.168.100.94:15672
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=rabbit
 spring.rabbitmq.password=password1234!
 
-# Spring ?????? ??
+#MySQL ????? ??
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/books?serverTimezone=UTC&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://localhost:3306/books?serverTimezone=UTC&useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=password1234!
-#addLogger(StdOutSqlLogger)
+addLogger(StdOutSqlLogger)
 
-#sql??
-#Database.connect("jdbc:mysql://localhost:3306/books", driver = "com.mysql.cj.jdbc.Driver", user = "root", password = "password1234!")
+Database.connect("jdbc:mysql://localhost:3306/books", driver = "com.mysql.cj.jdbc.Driver", user = "root", password = "password1234!")
+# Exposed ????? ?? ??
 logging.level.org.jetbrains.exposed=debug
 
 # Hibernate ?? ??
 logging.level.org.hibernate.type.descriptor.sql=trace
 
 # Server ??
-server.servlet.encoding.force-response=true
+server.servlet.encoding.force-response=true 
 
 # application.properties
 #spring.cache.type=redis
 spring.redis.host=localhost
 spring.redis.port=6379
+
+
+
